--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#97ca3f" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Web site to create todos" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/react192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -14,7 +14,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
-    <title>TODO Machine</title>
+    <title>TODO APP</title>
 </head>
 
 <body>
